--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/ebook-app
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=hoang123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
