--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#server.address= 192.168.204.157
 server.port=8080
 server.servlet.context-path=/admin
 spring.thymeleaf.check-template-location=true
